--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -1,5 +1,5 @@
 <div class="card">
-  <%= link_to image_tag(prototype.image, class: :card__img ), prototype_path(prototype.id) #if prototype.image.attached? %>
+  <%= link_to image_tag(prototype.image, class: :card__img ), prototype_path(prototype.id) %>
   <%#= link_to image_tag("プロトタイプの画像", class: :card__img ), root_path prototype_path(prototype.id), method: :get %>
   <div class="card__body">
     <%= link_to prototype.title, prototype_path(prototype.id), class: :card__title%>
